--- a/Lab0/counter_summary.html
+++ b/Lab0/counter_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>counter Project Status (10/01/2018 - 11:34:31)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>counter Project Status (10/01/2018 - 11:16:27)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Lab0.xise</TD>
@@ -234,11 +234,11 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TA/Documents/CS152B Team 3/Lab0\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Oct 1 11:21:16 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TA/Documents/CS152B Team 3/Lab0\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 1 11:34:27 2018</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TA/Documents/CS152B Team 3/Lab0\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 1 11:34:31 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TA/Documents/CS152B Team 3/Lab0\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 1 12:10:06 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TA/Documents/CS152B Team 3/Lab0\usage_statistics_webtalk.html'>WebTalk Report</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 1 12:10:18 2018</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/TA/Documents/CS152B Team 3/Lab0\webtalk.log'>WebTalk Log File</A></TD><TD>Current</TD><TD COLSPAN='2'>Mon Oct 1 12:10:22 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/01/2018 - 11:34:31</center>
+<br><center><b>Date Generated:</b> 10/03/2018 - 10:29:49</center>
 </BODY></HTML>
