--- a/Lab2/Lab2/top_summary.html
+++ b/Lab2/Lab2/top_summary.html
@@ -2,21 +2,21 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>sixteen_bit_alu Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>debouncer Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>Lab1.xise</TD>
+<TD>Lab2.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>sixteen_bit_alu</TD>
+<TD>top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>New</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xa6slx4-2csg225</TD>
+<TD>xc5vlx50t-2ff1136</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
@@ -74,5 +74,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/10/2018 - 12:12:23</center>
+<br><center><b>Date Generated:</b> 10/10/2018 - 12:12:06</center>
 </BODY></HTML>
