--- a/Lab2/Lab2/top_summary.html
+++ b/Lab2/Lab2/top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>debouncer Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Lab2.xise</TD>
@@ -74,5 +74,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 10/10/2018 - 12:12:06</center>
+<br><center><b>Date Generated:</b> 10/12/2018 - 14:13:52</center>
 </BODY></HTML>
