--- a/Final Project/serial_test/top_summary.html
+++ b/Final Project/serial_test/top_summary.html
@@ -2,16 +2,15 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>seven_seg Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>uart_rx Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>seven_seg_test.xise</TD>
+<TD>serial_test.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>seven_seg</TD>
+<TD>top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>New</TD>
 </TR>
@@ -75,5 +74,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/26/2018 - 11:04:09</center>
+<br><center><b>Date Generated:</b> 11/26/2018 - 12:16:09</center>
 </BODY></HTML>
