--- a/Final Project/fc_test/conv_summary.html
+++ b/Final Project/fc_test/conv_summary.html
@@ -2,21 +2,21 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>top Project Status</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>conv Project Status</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
-<TD>serial_test.xise</TD>
+<TD>fc_test.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
-<TD>top</TD>
+<TD>conv</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
 <TD>New</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xc6slx100t-2csg484</TD>
+<TD>xc6slx150t-2fgg676</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
@@ -74,5 +74,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 11/27/2018 - 06:09:28</center>
+<br><center><b>Date Generated:</b> 11/27/2018 - 06:09:00</center>
 </BODY></HTML>
