--- a/Final Project/serial_test/conv_tb_summary.html
+++ b/Final Project/serial_test/conv_tb_summary.html
@@ -16,12 +16,12 @@
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
-<TD>xa6slx4-2csg225</TD>
+<TD>xc5vlx50t-2ff1136</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
-<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
+<TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.6</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
 <TD>&nbsp;</TD>
 </TR>
@@ -74,5 +74,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/10/2018 - 19:06:31</center>
+<br><center><b>Date Generated:</b> 12/10/2018 - 15:00:10</center>
 </BODY></HTML>
