--- a/Final Project/softmax_test/softmax_summary.html
+++ b/Final Project/softmax_test/softmax_summary.html
@@ -71,8 +71,9 @@
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/CS152B/Desktop/cs152b/Final Project/softmax_test\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Wed Dec 12 10:20:21 2018</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/12/2018 - 00:21:54</center>
+<br><center><b>Date Generated:</b> 12/12/2018 - 12:42:30</center>
 </BODY></HTML>
